--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -36,8 +36,7 @@ jobs:
         uses: aquasecurity/trivy-action@7b7aa264d83dc58691451798b4d117d53d21edfe
         with:
           image-ref: 'hello-world-python3-flask-k8s:latest'
-          format: 'template'
-          template: '@/contrib/sarif.tpl'
+          format: 'sarif'
           output: 'trivy-results.sarif'
           severity: 'CRITICAL,HIGH'
 
